libmysql.c:   Bug#18830: incompatibility new libraries with old server   Don't execute SET NAMES with pre-4.1 server.